--- a/source/stylesheets/application.css.sass
+++ b/source/stylesheets/application.css.sass
@@ -16,3 +16,10 @@
 @import utils
 //@import navbar
 
+body
+  background: $gray
+
+.index-preview
+  img
+    max-width: 100%
+    padding: $grid-gutter-width/2
