--- a/source/demo.html.haml
+++ b/source/demo.html.haml
@@ -1,8 +1,14 @@
 - if locals[:skip_this]
   .col-xs-12
     .page-header
-      %a.btn.btn-lg.btn-block.btn-default{href: "#{locals[:next_link]}" }
-        skip this
+      .row
+        .col-xs-6
+          %a.btn.btn-lg.btn-block.btn-default{href: "images/demo/#{locals[:filename]}", target: :blank }
+            download
+        .col-xs-6
+          %a.btn.btn-lg.btn-block.btn-default{href: "#{locals[:next_link]}" }
+            next file
+
 - else
   %a.application-window.clickable{ style: "background-image: url(\"images/demo/#{locals[:src]}.png\")", 
     role: 'design-demo-image', href: "#{locals[:next_link]}", name: '#demo-image'}
